@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-20T08:17:03Z",
-  "count_outdated" : 250,
-  "uniques_outdated" : 118,
+  "timestamp" : "2022-04-20T16:16:47Z",
+  "count_outdated" : 251,
+  "uniques_outdated" : 119,
   "count" : 262,
   "uniques" : 128,
   "clones" : [
-    {
-      "timestamp": "2022-04-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
