@@ -1,3 +1,9 @@
+2022-04-20T16:16:47Z:
+* notice: last 14d: all unq: 11 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 250 118 / 262 128
+* notice: next accum: outdated-all outdated-unq / all unq: 251 119 / 262 128
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +2 +2 / -0 -0
+
 2022-04-20T08:17:03Z:
 * notice: last 14d: all unq: 12 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 250 118 / 260 126
